kube_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: website
  labels:
    name: website
spec:
  replicas: 1
  selector:
    matchLabels:
      name: website
  template:
    metadata:
      name: website
      labels:
        name: website
    spec:
      containers:
        - name: website
          image: fx8350:5000/website:lattest
          ports:
            - containerPort: 5000
          resources:
            requests:
              memory: 256Mi
            limits:
              memory: 512Mi
