kube_service.yml
apiVersion: v1
kind: Service
metadata:
  name: website
  labels:
    service: website
spec:
  selector:
    app: website
  ports:
    - port: 5000
      targetPort: 5000
