kube_ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: website-ingress
spec:
  rules:
    - host:
      http:
        paths:
          - path: /
            backend:
              serviceName: website
              servicePort: 5000
